--- a/Calc.Tests/packages.config
+++ b/Calc.Tests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FsCheck" version="2.9.0" targetFramework="net461" />
+  <package id="FsCheck.Xunit" version="2.9.0" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.1.17" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
   <package id="xunit" version="2.2.0" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.assert" version="2.2.0" targetFramework="net461" />
