--- a/Calc.Fsharp.TickSpec.Tests/Calc.Fsharp.TickSpec.Tests.fsproj
+++ b/Calc.Fsharp.TickSpec.Tests/Calc.Fsharp.TickSpec.Tests.fsproj
@@ -53,7 +53,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Content Include="packages.config" />
     <Compile Include="FeatureFixture.fs" />
-    <EmbeddedResource Include="Calc.txt" />
+    <EmbeddedResource Include="Calc.feature" />
     <Compile Include="CalcStepDefinitions.fs" />
   </ItemGroup>
   <ItemGroup>
